# leadsage

./: .env.example  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: __init__.py  base.py  contact_finder.py  factory.py  icp_parser.py  icp_refiner.py  lead_scorer.py  research.py
api/: app.py  schemas.py
api/routes/: health.py  runs.py  stream.py
common/: config.py  domain.py  email_validator.py  logging_config.py  ratelimit.py  retry.py  sanitise.py  secrets.py
common/context/: __init__.py  session_context.py  window.py
common/db/: __init__.py  models.py  session.py
common/db/repositories/: __init__.py  base.py  companies.py  conversations.py  leads.py  sessions.py  telemetry.py
common/events/: __init__.py  bus.py  events.py  observers.py  sse.py
common/llm/: __init__.py  anthropic.py  base.py  cached_llm.py  factory.py  ollama.py  openai_compat.py  response_cache.py
common/metrics/: __init__.py  prometheus_exporter.py
common/proxy/: __init__.py  base.py  brightdata.py  factory.py  smartproxy.py  static.py
common/schemas/: icp_request.py  lead_output.py
common/session/: __init__.py  cache.py  manager.py  memory.py
config/: config.json
discovery/: __init__.py  crawler.py  enricher.py  pipeline.py  query_planner.py
discovery/crawlers/: __init__.py  base.py  factory.py  playwright_crawler.py  proxy_crawler.py  requests_crawler.py
discovery/retreivers/: __init__.py  base.py  models.py  orchestrator.py  registry.py
discovery/retreivers/bing/: __init__.py  bing_search.py
discovery/retreivers/crunchbase/: crunchbase_search.py
discovery/retreivers/github/: github_search.py
discovery/retreivers/google/: __init__.py  google_search.py
discovery/retreivers/jobboards/: __init__.py  greenhouse_search.py  lever_search.py
discovery/retreivers/linkedin/: __init__.py  linkedin_extractor.py
discovery/retreivers/producthunt/: __init__.py  ph_search.py
discovery/retreivers/searchapi/: __init__.py  searchapi_search.py
discovery/retreivers/serper/: __init__.py  serper_search.py
discovery/retreivers/tavily/: __init__.py  tavily_search.py
discovery/retreivers/wellfound/: __init__.py  wellfound_search.py
discovery/retreivers/yc/: yc_search.py
docker/: app.Dockerfile
docker/postgres/: init.sql
services/: __init__.py  persistence_service.py  pipeline_service.py
tasks/: __init__.py  celery_app.py  pipeline_task.py
