[project]
name = "llm"
version = "0.3.0"
description = "AI Lead Generation Agent — configurable, multi-model, production-ready"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LLM backends
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    # HTTP / crawling
    "requests>=2.32.0",
    # Data validation
    "pydantic>=2.7.0",
    # Cache
    "redis>=5.0.0",
    # ORM & Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.139.0",
]

[project.optional-dependencies]
# OpenAI-compatible LLM backend (OpenAI, Groq, Together, vLLM)
openai = ["langchain-openai>=0.1.0"]

# Anthropic Claude
anthropic = ["langchain-anthropic>=0.1.0"]

# Playwright crawler (JS-rendered pages)
playwright = ["playwright>=1.44.0"]

# REST API server
api = ["fastapi>=0.111.0", "uvicorn[standard]>=0.30.0"]

# Celery task queue
worker = ["celery[redis]>=5.4.0"]

# Prometheus metrics
metrics = ["prometheus-client>=0.20.0"]

# Full dev setup
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.0.0",
    "httpx>=0.27.0",
]

# All optional providers
all = [
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "playwright>=1.44.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
]

[project.scripts]
lead-agent = "main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests/", ".venv/", "uv.lock"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]
