[project]
name = "prospector"
version = "0.3.0"
description = "AI Lead Generation Agent — configurable, multi-model, production-ready"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LLM backends
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    # HTTP / crawling
    "requests>=2.32.0",
    "httpx>=0.27.0",
    # Data validation
    "pydantic>=2.7.0",
    # Cache & broker
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    # ORM & database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Observability
    "prometheus-client>=0.20.0",
    # Config / env
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Playwright crawler (JS-rendered pages) — requires browser binaries
playwright = ["playwright>=1.44.0"]

# Everything including playwright
all = ["prospector[playwright]"]

[project.scripts]
lead-agent = "main:main"

# ---------------------------------------------------------------------------
# Dependency groups (dev tooling — not shipped with the package)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.0.0",
    "httpx>=0.27.0",
    "bandit>=1.7.0",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "UP046",  # Generic class with type params — requires PEP 695 rewrite
    "UP047",  # Generic function with type params — requires PEP 695 rewrite
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "api", "common", "discovery", "services", "tasks"]
force-sort-within-sections = true
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = false       # too noisy on untyped third-party stubs
warn_unused_ignores = false
exclude = ["tests/", ".venv/", "uv.lock"]

# ── Per-module overrides for pre-existing type issues ──────────────────────
# These modules have known typing gaps that pre-date mypy adoption.
# Fix incrementally; do not let them block CI.

[[tool.mypy.overrides]]
module = [
    "common.retry",
    "common.session.cache",
    "common.session.manager",
    "common.llm.factory",
    "common.llm.anthropic",
    "common.llm.ollama",
    "common.llm.openai_compat",
    "common.db.repositories.sessions",
    "common.db.repositories.conversations",
    "common.db.repositories.companies",
    "agents.icp_parser",
    "agents.lead_scorer",
    "agents.research",
    "agents.contact_finder",
    "services.pipeline_service",
    "discovery.query_planner",
    "discovery.enricher",
    "discovery.crawlers.factory",
    "discovery.crawlers.requests_crawler",
    "discovery.crawlers.playwright_crawler",
    "discovery.pipeline",
    "discovery.retreivers.base",
    "discovery.retreivers.yc.yc_search",
    "discovery.retreivers.wellfound.wellfound_search",
    "discovery.retreivers.producthunt.ph_search",
    "discovery.retreivers.jobboards.lever_search",
    "discovery.retreivers.jobboards.greenhouse_search",
    "discovery.retreivers.github.github_search",
    "discovery.retreivers.crunchbase.crunchbase_search",
]
ignore_errors = true
